# segmentation-robustness-framework

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  demo.ipynb  main.py  mkdocs.yml  pyproject.toml  pyrightconfig.json  requirements.txt  run-srf  setup-cli.py  srf  srf-list  srf-test
adversarial_segmentation_toolkit/: __init__.py
adversarial_segmentation_toolkit/attacks/: __init__.py  attack.py  fgsm.py  pgd.py
adversarial_segmentation_toolkit/datasets/: stanford_background.py  voc.py
adversarial_segmentation_toolkit/models/: __init__.py  base_model.py  deeplab.py  fcn.py
adversarial_segmentation_toolkit/utils/: __init__.py  _colormap.py  image_preprocessing.py  visualization.py
configs/: FCN_resnet101_VOC.yaml  config.yaml  sample_config.yaml
docs/: concepts.md  configuration_guide.md  core_concepts.md  custom_components.md  custom_datasets_guide.md  data_formats_reference.md  index.md  installation.md  model_loaders.md  practical_example.md  quick_start.md  quickstart.md  requirements.txt  universal_configuration_guide.md  user_guide.md
docs/api_reference/: adapters.md  attacks.md  cli.md  datasets.md  index.md  metrics.md  model_loaders.md  pipeline.md
docs/contributing/: code_style.md  development_setup.md  documentation_guide.md  index.md  release_guide.md  testing_guide.md
docs/examples/: advanced_examples.md  basic_examples.md
docs/javascripts/: mathjax.js
docs/reference/: model_loaders.md
docs/stylesheets/: extra.css
old_docs/: advanced_usage.md  api_reference.md  custom_components.md  practical_example.md  quickstart.md  universal_configuration_guide.md  user_guide.md
scripts/: setup-cli.py  srf-run
segmentation_robustness_framework/: __init__.py  list_attacks.py  list_datasets.py  robustness_evaluation.py
segmentation_robustness_framework/adapters/: __init__.py  base_protocol.py  custom_adapter.py  huggingface_adapter.py  registry.py  smp_adapter.py  torchvision_adapter.py
segmentation_robustness_framework/attacks/: __init__.py  attack.py  fgsm.py  pgd.py  registry.py  rfgsm.py  tpgd.py
segmentation_robustness_framework/cli/: __init__.py  list_components.py  list_metrics.py  main.py  run_config.py  run_tests.py
segmentation_robustness_framework/config/: __init__.py  model.py  model_config.py  validator.py
segmentation_robustness_framework/datasets/: __init__.py  _classes.py  ade20k.py  cityscapes.py  registry.py  stanford_background.py  voc.py
segmentation_robustness_framework/engine/: __init__.py  attack_loader.py  dataset_loader.py  engine_utils.py  model_loader.py  pipeline.py  robust_engine.py
segmentation_robustness_framework/loaders/: __init__.py  attack_loader.py  dataset_loader.py  model_loader.py
segmentation_robustness_framework/metrics/: __init__.py  base_metrics.py  custom_metrics.py
segmentation_robustness_framework/models/: __init__.py  base_model.py  deeplab.py  fcn.py
segmentation_robustness_framework/pipeline/: __init__.py  config.py  core.py
segmentation_robustness_framework/utils/: __init__.py  _classes.py  _colors.py  colormaps.py  dataset_utils.py  image_preprocessing.py  image_utils.py  loader_utils.py  log.py  metrics.py  model_utils.py  preprocessing.py  visualization.py
tests/: test_attacks.py  test_config_validator.py  test_custom_model_loader.py  test_model_config.py  test_models.py  test_utils.py  test_voc_dataset.py
tests/adapters/: base_adapter_common.py  test_custom_adapter.py  test_huggingface_adapter.py  test_registry.py  test_smp_adapter.py  test_torchvision_adapter.py
tests/attacks/: base_attack_common.py  test_attack_registry.py  test_base_attack.py  test_fgsm.py  test_pgd.py  test_rfgsm.py  test_tpgd.py
tests/data/: dummy_encoder_weights.pth  dummy_model_checkpoint.pth  dummy_model_weights.pth
tests/datasets/: test_ade20k_dataset.py  test_cityscapes_dataset.py  test_dataset_registry.py  test_stanford_background_dataset.py  test_voc_dataset.py
tests/loaders/: dummy_model.py  test_attack_loader.py  test_base_model_loader.py  test_custom_model_loader.py  test_dataset_loader.py  test_huggingface_model_loader.py  test_smp_model_loader.py  test_torchvision_model_loader.py  test_universal_model_loader.py
tests/metrics/: test_base_metrics.py  test_custom_metrics.py
tests/pipeline/: test_config.py  test_core.py
tests/utils/: test_dataset_utils.py  test_image_preprocessing.py  test_loader_utils.py  test_metrics.py  test_model_utils.py  test_visualization.py
(+21 files in other folders)
