[tool.poetry]
name = "segmentation-robustness-framework"
version = "0.3.1"
description = "Segmentation Robustness Framework - a powerful toolkit for evaluating the robustness of semantic segmentation models against adversarial attacks."
license = "MIT"
authors = ["Egor Vorobyev <voro6yov.egor@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
srf = "segmentation_robustness_framework.cli.main:main"
srf-run = "segmentation_robustness_framework.cli.run_config:main"
srf-list = "segmentation_robustness_framework.cli.list_components:main"
srf-test = "segmentation_robustness_framework.cli.run_tests:main"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.3.0"
matplotlib = "^3.10.0"
torch = "2.6.0"
torchvision = "0.21.0"
pyyaml = "^6.0.2"
types-pyyaml = "^6.0.12.20240917"
tqdm = "^4.67.1"
pandas = "^2.3.1"
transformers = {version = "^4.53.1", optional = true}
segmentation-models-pytorch = { version = "^0.5.0", optional = true }

[tool.poetry.extras]
transformers = ["transformers"]
smp = ["segmentation-models-pytorch"]
full = ["transformers", "segmentation-models-pytorch"]

[tool.poetry.group.lint.dependencies]
ruff = "^0.5.7"
isort = "^5.13.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pre-commit = "^4.2.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.15"
mkdocstrings-python = "^1.16.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
indent-width = 4
preview = true
src = ["segmentation_robustness_framework"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 72
quote-style = "double"

[tool.ruff.lint]
extend-select = ["Q", "RUF100", "C90", "UP", "I"]
extend-ignore = ["F841", "C901"]

[tool.ruff.lint.pydocstyle]
convention = "google"
